style.css
/* ... */
.site-title {
  font-size: 1.85em;
  line-height: 1.62162em;
  line-height: 1.07027em;
  margin-top: 8px;
  margin-bottom: 3px;
  margin-left: 0px;
  margin-right: 0px;
}

.site-title img {
  margin-top: -1px;
  margin-bottom: -4px;
  margin-right: 10px;
}

.site-description {
  display: none;
}

/* =Menu */
.main-navigation {
  border-left: 1px solid #cccccc;
  display: block;
  float: right;
  font-family: "Ostrich Sans", Helvetica, Arial, sans-serif;
  font-weight: bold;
  max-width: 50%;
  position: relative;
  text-align: right;
  text-transform: uppercase;
}

.social-media {
  border-left: 1px solid #cccccc;
  display: block;
  float:right;
  padding-left:5px;
  padding-right:5px;
  padding-top:8px;
  padding-bottom:12px;
  line-height: 30px;
}

@media screen and (max-width: 885px) {
  .social-media {
    margin-right: 60px;
  }
}

.social-media a > i {
  padding-left: 5px;
  padding-right: 5px;
  color: black;
}

.social-media a > i:hover {
  color: #07a1f2;
}

.languages {
  border-left: 1px solid #cccccc;
  display: block;
  float:right;
  padding-left:5px;
  padding-right:5px;
  padding-top:8px;
  padding-bottom:12px;
  line-height: 30px;
  font-family: 'Ostrich Sans', Helvetica, Arial, sans-serif;
  font-size: 20px;
  font-style: normal;
  font-weight: bold;
}

.languages a {
  padding-left: 5px;
  padding-right: 5px;
  color: black;
}

.languages a.active {
  color: #07a1f2;
}

.languages a:hover {
  color: #07a1f2;
}

@media screen and (max-width: 885px) {
  .main-navigation {
    border: 0;
    float: none;
    max-width: 100%;
  }
}
.main-navigation ul {
  list-style: none;
  margin: 0;
  padding-left: 0;
}
.main-navigation ul li {
  display: inline-block;
  margin-left: 15px;
  padding: 10px 0;
  position: relative;
}
.main-navigation ul li a {
  color: #666666;
  display: block;
  text-decoration: none;
}
.main-navigation ul li:hover > a {
  color: #07a1f2;
}
.main-navigation ul li:hover > ul,
.main-navigation ul li.focus > ul {
  display: block;
  opacity: 1;
  visibility: visible;
  -webkit-transition: all 0.3s ease-in-out;
  -moz-transition: all 0.3s ease-in-out;
  -o-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
}
.main-navigation ul .current_page_item > a,
.main-navigation ul .current-menu-item > a {
  color: #07a1f2;
}
.main-navigation ul ul {
  padding-right: 15px;
  background: #444444;
  box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
  display: none;
  -webkit-transition: all 0.3s ease-in-out;
  -moz-transition: all 0.3s ease-in-out;
  -o-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
  float: left;
  text-align: left;
  opacity: 0;
  position: absolute;
  top: 40px;
  left: 0;
  visibility: hidden;
  z-index: 99999;
}
@media screen and (max-width: 885px) {
  .main-navigation ul ul {
    padding-right: 0;
  }
}
.main-navigation ul ul:hover > a {
  color: #07a1f2;
}
.main-navigation ul ul li {
  padding: 5px 0;
}
.main-navigation ul ul li a {
  color: white;
  width: 180px;
}
.main-navigation ul ul ul {
  left: 100%;
  top: 0;
}

/* Small menu */
.menu-toggle {
  font-size: 1.85em;
  line-height: 1.62162em;
  background-color: #07a1f2;
  clear: none;
  color: white;
  cursor: pointer;
  display: none;
  float: right;
  font-weight: bold;
  margin: 0;
  padding: 3.75px 0;
  position: absolute;
  top: 0;
  right: 0;
  text-align: right;
  text-transform: uppercase;
}
.menu-toggle:before {
  background-color: #0570a8;
  content: "\f0c9";
  display: inline-block;
  float: right;
  font-size: 24px;
  padding: 15px;
  vertical-align: middle;
}
@media screen and (max-width: 885px) {
  .menu-toggle {
    display: block;
    line-height: 1;
    padding: 0;
  }
}

@media screen and (max-width: 885px) {
  .menu-toggle,
  .main-navigation.toggled .nav-menu {
    display: block;
    clear: both;
    text-align: left;
  }
  .menu-toggle li,
  .main-navigation.toggled .nav-menu li {
    display: block;
    margin: 0;
    padding: 0;
  }
  .menu-toggle li a,
  .main-navigation.toggled .nav-menu li a {
    border-bottom: 1px solid #999999;
    padding: 7.5px 15px;
  }
  .menu-toggle ul,
  .main-navigation.toggled .nav-menu ul {
    background: transparent;
    box-shadow: none;
    clear: both;
    display: block;
    float: none;
    opacity: 1;
    visibility: visible;
    margin: 0;
    position: relative;
    top: auto;
    left: auto;
  }
  .menu-toggle ul a,
  .main-navigation.toggled .nav-menu ul a {
    padding-left: 30px;
  }
  .menu-toggle ul ul,
  .main-navigation.toggled .nav-menu ul ul {
    clear: both;
    float: none;
    left: auto;
    top: auto;
    width: 100%;
  }
  .menu-toggle ul ul a,
  .main-navigation.toggled .nav-menu ul ul a {
    padding-left: 45px;
  }
  .menu-toggle ul ul ul a,
  .main-navigation.toggled .nav-menu ul ul ul a {
    padding-left: 60px;
  }
  .menu-toggle ul a,
  .main-navigation.toggled .nav-menu ul a {
    color: #666666;
    width: 100%;
  }
  .menu-toggle ul a:hover,
  .main-navigation.toggled .nav-menu ul a:hover {
    color: #07a1f2;
  }

  .main-navigation ul {
    display: none;
  }

  .menu-toggle {
    clear: none;
  }
}
/* =Content */
.hentry {
  margin: 0 0 30px;
  position: relative;
}

.entry-content {
  margin: 0 auto;
  font-size:90%;
}

@media screen and (min-width: 885px) {
  .entry-content {
    width: 885px;
  }
}

@media screen and (max-width: 885px) {
  .entry-content {
    font-size: 0.75em;
    line-height: 2em;
    margin-left: 10px;
    margin-right: 10px;
  }
}

.byline,
.updated {
  display: none;
}

.single .byline,
.group-blog .byline {
  display: inline;
}

.no-ostrich {
  font-family: 'Roboto Slab', serif;
}

.entry-header {
  background: #1e1e1e;
  border-bottom: 52.5px solid #323232;
  border-top: 52.5px solid #323232;
  color: white;
  margin: 0 0 20px;
  padding: 10px 0;
  position: relative;
  z-index: 1;
}
/* ... */

